--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Local Notes</title>
+    <title>Local Notes/title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-    <div class="container">
-        <h1>Local Notes</h1>
-        <input type="text" id="noteTitle" placeholder="Note Title..." />
-        <input type="text" id="noteContent" placeholder="Note Content..." />
-        <input type="text" id="noteTag" placeholder="Tag (optional)" />
-        <button id="addNoteButton">Add Note</button>
-        <input type="text" id="searchBar" placeholder="Search notes..." oninput="filterNotes()" />
-        <ul id="notesList"></ul>
+<body class="bg-gray-100 text-gray-800">
+
+    <!-- Sidebar -->
+    <div class="flex h-screen">
+        <nav class="bg-gray-800 text-white w-64 p-6 flex flex-col">
+            <h2 class="text-xl mb-6">Dashboard</h2>
+            <ul class="space-y-4">
+                <li><a href="#" class="hover:text-blue-400">Notes</a></li>
+                <li><a href="#" class="hover:text-blue-400">Categories</a></li>
+                <li><a href="#" class="hover:text-blue-400">Settings</a></li>
+            </ul>
+        </nav>
+
+        <!-- Main Content -->
+        <div class="flex-1 p-8">
+            <header class="flex justify-between items-center mb-8">
+                <h1 class="text-3xl">Your Notes</h1>
+                <input type="text" id="search" class="border rounded p-2 w-1/3" placeholder="Search notes...">
+            </header>
+
+            <!-- Notes Grid -->
+            <div id="notes-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+                <!-- Notes will be dynamically added here -->
+            </div>
+        </div>
     </div>
-    <script src="js/app.js"></script>
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
