--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-100">
 
     <!-- Sidebar -->
     <div class="flex h-screen">
         <nav class="bg-gray-800 text-white w-64 p-6 flex flex-col">
-            <h2 class="text-xl mb-6">Dashboard</h2>
+            <h2 class="text-2xl font-bold mb-8">Dashboard</h2>
             <ul class="space-y-4">
                 <li><a href="#" class="hover:text-blue-400">Notes</a></li>
                 <li><a href="#" class="hover:text-blue-400">Categories</a></li>
@@ -23,14 +23,42 @@
         <!-- Main Content -->
         <div class="flex-1 p-8">
             <header class="flex justify-between items-center mb-8">
-                <h1 class="text-3xl">Your Notes</h1>
-                <input type="text" id="search" class="border rounded p-2 w-1/3" placeholder="Search notes...">
+                <h1 class="text-4xl font-bold">Your Notes</h1>
+                <div class="flex space-x-4">
+                    <input type="text" id="search" class="border rounded p-2" placeholder="Search notes...">
+                    <button id="add-note-btn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Add Note</button>
+                </div>
             </header>
 
             <!-- Notes Grid -->
             <div id="notes-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
                 <!-- Notes will be dynamically added here -->
             </div>
+        </div>
+    </div>
+
+    <!-- Add Note Modal -->
+    <div id="note-modal" class="hidden fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center">
+        <div class="bg-white p-6 rounded-lg shadow-lg max-w-lg w-full">
+            <h2 class="text-2xl font-bold mb-4">Add New Note</h2>
+            <form id="note-form">
+                <div class="mb-4">
+                    <label for="note-title" class="block text-lg">Title</label>
+                    <input type="text" id="note-title" class="w-full p-2 border rounded-lg" required>
+                </div>
+                <div class="mb-4">
+                    <label for="note-content" class="block text-lg">Content</label>
+                    <textarea id="note-content" class="w-full p-2 border rounded-lg" rows="5" required></textarea>
+                </div>
+                <div class="mb-4">
+                    <label for="note-tag" class="block text-lg">Tag</label>
+                    <input type="text" id="note-tag" class="w-full p-2 border rounded-lg">
+                </div>
+                <div class="flex justify-end space-x-4">
+                    <button type="button" id="close-modal-btn" class="bg-gray-500 text-white px-4 py-2 rounded-lg">Cancel</button>
+                    <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Save Note</button>
+                </div>
+            </form>
         </div>
     </div>
 
