--- a/public/index.html
+++ b/public/index.html
@@ -10,31 +10,30 @@
 <body class="bg-gray-100 dark:bg-gray-900">
 
     <!-- Sidebar -->
-    <div class="flex h-screen">
-        <nav class="bg-gray-800 text-white w-64 p-6 flex flex-col">
-            <h2 class="text-2xl font-bold mb-8">Dashboard</h2>
-            <ul class="space-y-4">
-                <li><a href="#" class="hover:text-blue-400">Notes</a></li>
-                <li><a href="#" class="hover:text-blue-400">Categories</a></li>
-                <li><a href="#" class="hover:text-blue-400">Settings</a></li>
-            </ul>
-            <button id="theme-toggle" class="mt-auto bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Toggle Theme</button>
-        </nav>
+    <div id="sidebar" class="flex flex-col h-screen bg-gray-800 text-white w-64 p-6">
+        <h2 class="text-2xl font-bold mb-8">Dashboard</h2>
+        <ul class="space-y-4">
+            <li><a href="#" class="hover:text-blue-400">Notes</a></li>
+            <li><a href="#" class="hover:text-blue-400">Categories</a></li>
+            <li><a href="#" class="hover:text-blue-400">Settings</a></li>
+        </ul>
+        <button id="theme-toggle" class="mt-auto bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Toggle Theme</button>
+        <button id="collapse-sidebar" class="mt-2 bg-gray-600 text-white px-4 py-2 rounded-lg hover:bg-gray-500">Close</button>
+    </div>
 
-        <!-- Main Content -->
-        <div class="flex-1 p-8">
-            <header class="flex justify-between items-center mb-8">
-                <h1 class="text-4xl font-bold">Your Notes</h1>
-                <div class="flex space-x-4">
-                    <input type="text" id="search" class="border rounded p-2" placeholder="Search notes...">
-                    <button id="add-note-btn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Add Note</button>
-                </div>
-            </header>
-
-            <!-- Notes Grid -->
-            <div id="notes-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6" ondrop="drop(event)" ondragover="allowDrop(event)">
-                <!-- Notes will be dynamically added here -->
+    <!-- Main Content -->
+    <div class="flex-1 p-8">
+        <header class="flex justify-between items-center mb-8">
+            <h1 class="text-4xl font-bold">Your Notes</h1>
+            <div class="flex space-x-4">
+                <input type="text" id="search" class="border rounded p-2" placeholder="Search notes...">
+                <button id="add-note-btn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Add Note</button>
             </div>
+        </header>
+
+        <!-- Notes Grid -->
+        <div id="notes-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <!-- Notes will be dynamically added here -->
         </div>
     </div>
 
