--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-gray-100 dark:bg-gray-900">
+<body class="bg-gray-100 dark:bg-gray-900 flex">
 
     <!-- Sidebar -->
     <div id="sidebar" class="flex flex-col h-screen bg-gray-800 text-white w-64 p-6">
