--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Notes</title>
+    <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" id="theme-css">
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 flex">
 
@@ -15,6 +16,7 @@
         <ul class="space-y-4">
             <li><a href="#" class="hover:text-blue-400">Notes</a></li>
             <li><a href="#" class="hover:text-blue-400">Categories</a></li>
+            <li><a href="#" class="hover:text-blue-400" id="open-theme-store">Themes Store</a></li>
             <li><a href="#" class="hover:text-blue-400">Settings</a></li>
         </ul>
         <button id="theme-toggle" class="mt-auto bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Toggle Theme</button>
@@ -24,17 +26,31 @@
     <!-- Main Content -->
     <div class="flex-1 p-8">
         <header class="flex justify-center mb-8">
-            <h1 class="text-4xl font-bold">Your Notes</h1>
+            <h1 class="text-4xl font-bold text-gray-900 dark:text-gray-100">Your Notes</h1>
         </header>
-        <div class="flex justify-between mb-4">
-            <input type="text" id="search" class="border rounded p-2" placeholder="Search notes...">
-            <button id="add-note-btn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Add Note</button>
+        
+        <div id="main-content">
+            <div class="flex justify-between mb-4">
+                <input type="text" id="search" class="border rounded p-2" placeholder="Search notes...">
+                <button id="add-note-btn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Add Note</button>
+            </div>
+
+            <!-- Notes Grid -->
+            <div id="notes-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <!-- Notes will be dynamically added here -->
+            </div>
         </div>
 
-        <!-- Notes Grid -->
-        <div id="notes-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <!-- Notes will be dynamically added here -->
+        <!-- Themes Store -->
+        <div id="theme-store" class="hidden">
+            <header class="flex justify-center mb-8">
+                <h1 class="text-4xl font-bold text-gray-900 dark:text-gray-100">Themes Store</h1>
+            </header>
+            <div id="themes-list" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+                <!-- Themes will be dynamically added here -->
+            </div>
         </div>
+
     </div>
 
     <!-- Add Note Modal -->
@@ -64,5 +80,6 @@
     </div>
 
     <script src="/js/script.js"></script>
+    <script src="/js/themeManager.js"></script>
 </body>
 </html>
