--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Local Notes</title>
     <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css" id="theme-css">
+    <link id="theme-css" rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 flex">
 
